improve exist service
