# apps/backend/auth-service/src/docs/swagger.json
@@ -107,6 +107,33 @@
 		"contact": {}
 	},
 	"paths": {
+		"/v1/auth/health": {
+			"get": {
+				"operationId": "GetHealth",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"message"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": []
+			}
+		},
 		"/v1/auth/signup": {
 			"post": {
 				"operationId": "Signup",
