# apps/backend/product-service/src/controllers/product.controller.ts
@@ -24,6 +24,15 @@ import {
 
 @Route("v1/products")
 export class ProductController extends Controller {
+  @Get("/health")
+  public async getHealth(): Promise<{ message: string }> {
+    try {
+      return { message: "OK" };
+    } catch (error) {
+      throw error;
+    }
+  }
+
   @Get()
   public async getAllProducts(
     @Queries() queries: ProductGetAllRequest
@@ -45,7 +54,7 @@ export class ProductController extends Controller {
 
   @SuccessResponse("201", "Created")
   @Post()
-  public async createItem(
+  public async createProduct(
     @Body() requestBody: ProductCreateRequest
   ): Promise<IItem> {
     try {
@@ -57,46 +66,60 @@ export class ProductController extends Controller {
         price: newProduct.price,
       };
     } catch (error) {
+      console.error(
+        `ProductsController - createProduct() method error: ${error}`
+      );
       throw error;
     }
   }
 
-  @Get("{id}")
-  public async getItemById(@Path() id: string): Promise<ProductResponse> {
+  @Get("{productId}")
+  public async getProductById(
+    @Path() productId: string
+  ): Promise<ProductResponse> {
     try {
-      const product = await ProductService.getProductById(id);
+      const product = await ProductService.getProductById(productId);
       return {
         message: "success",
         data: product,
       };
     } catch (error) {
+      console.error(
+        `ProductsController - getProductById() method error: ${error}`
+      );
       throw error;
     }
   }
 
-  @Put("{id}")
-  public async updateItem(
-    @Path() id: string,
+  @Put("{productId}")
+  public async updateProductById(
+    @Path() productId: string,
     @Body() requestBody: ProductUpdateRequest
   ): Promise<ProductResponse> {
     try {
-      const updatedProduct = await ProductService.updateProduct(
-        id,
+      const updatedProduct = await ProductService.updateProductById(
+        productId,
         requestBody
       );
 
       return { message: "success", data: updatedProduct };
     } catch (error) {
+      console.error(
+        `ProductsController - updateProductById() method error: ${error}`
+      );
       throw error;
     }
   }
 
   @SuccessResponse(204, "Delete Success")
-  @Delete("{id}")
-  public async deleteItemById(@Path() id: string): Promise<void> {
+  @Delete("{productId}")
+  public async deleteProductById(@Path() productId: string): Promise<void> {
     try {
-      await ProductService.deleteProduct(id);
+      await ProductService.deleteProductById(productId);
     } catch (error) {
+      console.error(
+        `ProductsController - deleteProductById() method error: ${error}`
+      );
       throw error;
     }
   }
