# apps/backend/user-service/src/controllers/health.controller.ts
@@ -1,13 +1,0 @@
-import { Controller, Get, Route } from "tsoa";
-
-@Route("v1/users")
-export class HealthController extends Controller {
-  @Get("/health")
-  public async getHealth(): Promise<{ message: string }> {
-    try {
-      return { message: "OK" };
-    } catch (error) {
-      throw error;
-    }
-  }
-}
